<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Username -->
    <EditText
        android:id="@+id/usernameField"
        android:hint="@string/username_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>

    <!-- Password -->
    <EditText
        android:id="@+id/passwordField"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <!-- Login -->
    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"/>

    <!-- Register Navigation -->
    <Button
        android:id="@+id/createAccountButton"
        android:text="@string/go_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

</LinearLayout>
